k8sFile/production-mon-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-production-mon
  namespace: monitoring
  labels:
    k8s-app: k8s-production-mon
spec:
  template:
    metadata:
      labels:
        app: k8s-production-mon
    spec:
      containers:
      - args:
        name: k8s-production-mon
        image: alimoslehirad/k8s_production_mon:latest
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5035
        volumeMounts:
          - mountPath: /app-data
            name: k8s-production-mon
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      volumes:
        - name: k8s-production-mon
          persistentVolumeClaim:
            claimName: k8s-production-mon
