k8sFile/production-mon-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: k8s-production-mon
  name: k8s-production-mon
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 5035
    protocol: TCP
    targetPort: http
  selector:
    app: k8s-production-mon
  type: ClusterIP
