k8sFile/production-mon-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: nginx
  name: production-mon-ingress
  namespace: monitoring
spec:
  rules:
  - host: healthchk.qcluster.org
    http:
      paths:
      - backend:
          serviceName: k8s-production-mon
          servicePort: 5035
        path: /
  tls:
  - hosts:
    - healthchk.qcluster.org
    secretName: tls-healthchk
